[package]
name = "ichibankuji"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "api"
path = "src/lib/mod.rs"
[dependencies]
axum = "0.6.9"
chrono = { version = "0.4.23", features = ["serde"] }
serde = { version = "1.0.152", features = ["derive"] }

sqlx = { version = "0.6.2", features = ["uuid", "chrono", "runtime-tokio-rustls", "postgres"] }
thiserror = "1.0.38"
tokio = { version = "1.25.0", features = ["full"] }
uuid = { version = "1.3.0", features = ["v4", "serde"] }
