[package]
name = "ichibankuji"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "api"
path = "src/lib/mod.rs"
[dependencies]
axum = { version = "0.5.5", features = ["multipart", "headers"] }
bcrypt = "0.14.0"
chrono = { version = "0.4.23", features = ["serde"] }
futures = "0.3.26"
headers = "0.3.8"
rand = "0.8.5"
serde = { version = "1.0.152", features = ["derive"] }

sqlx = { version = "0.6.2", features = ["uuid", "chrono", "runtime-tokio-rustls", "postgres"] }
thiserror = "1.0.38"
tokio = { version = "1.25.0", features = ["full"] }
tokio-util = { version = "0.7.7", features = ["io"] }
tower-cookies = "0.6.0"
tower-http = { version = "0.2.5", features = ["cors"] }
uuid = { version = "1.3.0", features = ["v4", "serde"] }
